--- a/website/index.html
+++ b/website/index.html
@@ -41,14 +41,13 @@
 <p>Tarballs for released versions of dbus-deviation are below. All have been
    signed with key 4B2EAFA0 (Philip Withnall).</p>
 <ul>
-	<li>No releases yet</li>
-	<!--<li>2015-04-29: <a href="./dbus-deviation-0.1.0.tar.xz">0.1.0</a> (<a href="./dbus-deviation-0.1.0.tar.xz.asc">signature</a>)</li>-->
+	<li>2015-04-29: <a href="./dbus-deviation-0.1.0.tar.gz">0.1.0</a> (<a href="./dbus-deviation-0.1.0.tar.gz.asc">signature</a>)</li>
 </ul>
 
 <p>Building and installing follows the standard Python setuptools process:</p>
-<pre>tar -xJf ./dbus-deviation-<span class="replaceable">$VERSION</span>.tar.xz
+<pre>tar -xzf ./dbus-deviation-<span class="replaceable">$VERSION</span>.tar.gz
 cd ./dbus-deviation-<span class="replaceable">$VERSION</span>
-./setup.py --prefix=<span class="replaceable">$PREFIX</span> build
+./setup.py build
 ./setup.py --prefix=<span class="replaceable">$PREFIX</span> install</pre>
 
 
