website: Link to the documentation

--- a/website/index.html
+++ b/website/index.html
@@ -51,6 +51,14 @@ cd ./dbus-deviation-<span class="replaceable">$VERSION</span>
 ./setup.py --prefix=<span class="replaceable">$PREFIX</span> install</pre>
 
 
+<h2>Documentation</h2>
+
+<p>API documentation is
+   <a href="https://pythonhosted.org/dbus-deviation/" title="dbus-deviation documentation.">available on pythonhosted</a>,
+   or
+   <a href="./docs/latest/" title="dbus-deviation documentation">available here</a>.</p>
+
+
 <h2>Source code and bugs</h2>
 
 <h3 id="git">Git repository</h3>
