--- a/website/index.html
+++ b/website/index.html
@@ -42,6 +42,7 @@
    signed with key 4B2EAFA0 (Philip Withnall).</p>
 <ul>
 	<li>2015-04-29: <a href="./dbus-deviation-0.1.0.tar.gz">0.1.0</a> (<a href="./dbus-deviation-0.1.0.tar.gz.asc">signature</a>)</li>
+	<li>2015-05-29: <a href="./dbus-deviation-0.2.0.tar.gz">0.2.0</a> (<a href="./dbus-deviation-0.2.0.tar.gz.asc">signature</a>)</li>
 </ul>
 
 <p>Building and installing follows the standard Python setuptools process:</p>
