website: Link to more documentation

--- a/website/index.html
+++ b/website/index.html
@@ -54,10 +54,18 @@ cd ./dbus-deviation-<span class="replaceable">$VERSION</span>
 
 <h2>Documentation</h2>
 
+<p>For installation and quick-start information, see the
+   <a href="https://github.com/pwithnall/dbus-deviation/blob/master/README" title="README for dbus-deviation.">README
+   file</a>.</p>
+
 <p>API documentation is
    <a href="https://pythonhosted.org/dbus-deviation/" title="dbus-deviation documentation.">available on pythonhosted</a>,
    or
    <a href="./docs/latest/" title="dbus-deviation documentation">available here</a>.</p>
+
+<p>Details on all errors produced by dbus-deviation is
+   <a href="./errors.html" title="dbus-deviation error documentation">available
+   here</a>.</p>
 
 
 <h2>Source code and bugs</h2>
