--- a/website/index.html
+++ b/website/index.html
@@ -53,7 +53,7 @@ cd ./dbus-deviation-<span class="replaceable">$VERSION</span>
 ./setup.py --prefix=<span class="replaceable">$PREFIX</span> install</pre>
 
 
-<h2>Documentation</h2>
+<h2 id="documentation">Documentation</h2>
 
 <p>For installation and quick-start information, see the
    <a href="https://github.com/pwithnall/dbus-deviation/blob/master/README" title="README for dbus-deviation.">README
