build: Relicense to LGPLv2.1+
This makes the licensing clearer, more standardised, and more like how
D-Bus wishes it could be (the only reason D-Bus itself hasn’t relicensed
is because they cannot track down all former contributors).

Permission has been gained from all authors in the issue below:
 • Philip Withnall
 • Mathieu Duponchelle
 • Kaloyan Tenchov

https://github.com/pwithnall/dbus-deviation/issues/7

--- a/website/index.html
+++ b/website/index.html
@@ -28,12 +28,15 @@
 <p>A second Python module, dbusapi, is provided for parsing D-Bus introspection
    XML to produce an AST representing a D-Bus interface.</p>
 
-<p>dbus-deviation is licenced under the same licence as the
+<p>dbus-deviation is licenced under the
+   <a href="http://www.gnu.org/licenses/lgpl-2.1.html" title="Text of the GNU Lesser General Public Licence, version 2.1.">LGPLv2.1+</a>.</p>
+<p>Versions 0.4.0 and earlier were licenced under the same licence as the
    <a href="http://dbus.freedesktop.org/" title="D-Bus: a message bus system.">D-Bus
    project</a>: your choice of the
    <a href="http://www.spdx.org/licenses/AFL-2.1#licenseText" title="Text of the Academic Free Licence, version 2.1.">Academic Free License version 2.1</a>,
    or the
-   <a href="http://www.gnu.org/licenses/gpl-2.0.html" title="Text of the GNU General Public Licence, version 2.">GPLv2+</a>.</p>
+   <a href="http://www.gnu.org/licenses/gpl-2.0.html" title="Text of the GNU General Public Licence, version 2.">GPLv2+</a>.
+   For version 0.5.0, the licence was changed to LGPLv2.1+ as it’s a more standard licence with simpler implications.</p>
 
 
 <h2 id="download-installation">Download and installation</h2>
