website: Update to list 0.5.0 release

--- a/website/index.html
+++ b/website/index.html
@@ -48,6 +48,7 @@
 	<li>2015-05-29: <a href="./dbus-deviation-0.2.0.tar.gz">0.2.0</a> (<a href="./dbus-deviation-0.2.0.tar.gz.asc">signature</a>)</li>
 	<li>2015-05-29: <a href="./dbus-deviation-0.3.0.tar.gz">0.3.0</a> (<a href="./dbus-deviation-0.3.0.tar.gz.asc">signature</a>)</li>
 	<li>2016-02-22: <a href="./dbus-deviation-0.4.0.tar.gz">0.4.0</a> (<a href="./dbus-deviation-0.4.0.tar.gz.asc">signature</a>)</li>
+	<li>2016-03-03: <a href="./dbus-deviation-0.5.0.tar.gz">0.5.0</a> (<a href="./dbus-deviation-0.5.0.tar.gz.asc">signature</a>)</li>
 </ul>
 
 <p>Building and installing follows the standard Python setuptools process:</p>
