website: Update bug reporting instructions
Bugs Everywhere is dead; we’re probably best off moving to GitHub, since
it’s where all the cool kids are.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

--- a/website/index.html
+++ b/website/index.html
@@ -89,14 +89,18 @@ cd ./dbus-deviation-<span class="replaceable">$VERSION</span>
 <h3 id="bugs">Bugs</h3>
 
 <p>dbus-deviation uses
+   <a href="https://github.com/pwithnall/dbus-deviation/issues" title="Issue tracking for dbus-deviation.">GitHub’s issue tracking</a>
+   for bugs and enhancement requests.</p>
+
+<p>dbus-deviation has historically used
    <a href="http://www.bugseverywhere.org/" title="Bugs Everywhere is a distributed bug tracking system.">Bugs
    Everywhere</a> for feature enhancement tracking, so to
-   view all currently open bugs, <a href="#git">clone the dbus-deviation git
+   view all historically open bugs, <a href="#git">clone the dbus-deviation git
    repository</a> and run:</p>
 <pre>be list</pre>
 
-<p>To file a bug, please <a href="#contact">contact the authors</a> by
-   e-mail.</p>
+<p>To file a bug without using GitHub, please <a href="#contact">contact the
+   authors</a> by e-mail.</p>
 
 
 <h2 id="contact">Contact</h2>
